# romskjemaing

./: .env  .flake8  .gitignore  2d_floor_plan_improvements_summary.md  API_DOCUMENTATION.md  AZURE_SQL_SETUP_GUIDE.md  BUG_FIXES_PLAN.md  CLI_README.md  DEPLOYMENT.md  Dockerfile  ERROR_HANDLING_IMPLEMENTATION.md  FASE_0_COMPLETION_REPORT.md  FASE_1_IMPLEMENTATION_SUMMARY.md  IFC-Room-Schedule.spec  KIRO_COMPLIANCE_REPORT.md  LICENSE  QUICK_DEPLOY.md  README.md  README_IFC_TESTING.md  RUN_APP.md  Soner_akkordsvingen_room_schedule.json  Soner_deich_room_schedule.json  TASK_10_COMPLETION_SUMMARY.md  TASK_13_END_TO_END_TESTS_SUMMARY.md  TASK_4_TIMEOUT_HANDLING_SUMMARY.md  TASK_5_CANCELLATION_IMPLEMENTATION_SUMMARY.md  TASK_6_1_COMPLETION_SUMMARY.md  TASK_6_1_SUMMARY.md  TASK_7_ENHANCED_LOGGING_SUMMARY.md  TASK_8_TEST_RESULTS_SUMMARY.md  TROUBLESHOOTING_GUIDE.md  analyze_spatial_positioning.py  build_executable.py  cosmetic_pen_fix_summary.md  create_database.sql  create_romskjema_database.sh  create_romskjema_db.py  debug_current_geometry.py  debug_current_geometry_fixed.py  debug_floor_plan_canvas.py  (+82 more)
.kiro/hooks/: code-quality.md  documentation-generator.md  export-format-validator.md  ifc-validator.md  performance-monitor.md  pyqt-ui-preview.md  requirements-sync.md  test-runner.kiro.hook  test-runner.md
.kiro/specs/: ifc_doc.md
config/: database_config.py
demo_output/: demo_comprehensive_room_schedule.json
demo_output/user_input_templates/: SPC-02-A101-111-003_user_input_template.json  SPC-02-A101-130-001_user_input_template.json  (+1 more)
docs/: DEPLOYMENT_GUIDE.md  USER_GUIDE.md
docs/floorplandocs/: config-schema.json  (+13 more)
ifc_floor_plan_generator/: __init__.py  cli.py  main.py  models.py
ifc_room_schedule/: __init__.py
tesfiler/: modenhetsmåling.json  room_scheduel_input_template.json  room_scheduel_req.json  standard_samspill_vegger_no.json
tests/: __init__.py  run_comprehensive_tests.py  test_azure_sql_exporter.py  test_comprehensive_end_to_end.py  test_comprehensive_error_handling.py  test_comprehensive_integration.py  test_comprehensive_room_schedule.py  test_config_manager.py  test_config_manager_summary.md  test_csv_exporter.py  test_data_models.py  test_end_to_end_integration.py  test_enhanced_geometry_extractor.py  test_enhanced_space_list_widget.py  test_error_handling.py  test_excel_exporter.py  test_export_dialog_formats.py  test_export_integration.py  test_floor_plan_widget.py  test_floor_switching_integration.py  test_geometry_cache.py  test_geometry_engine.py  test_geometry_engine_cache.py  test_geometry_extractor.py  test_geometry_generation_task_5_3.py  test_geometry_models.py  test_ifc_file_reader.py  test_ifc_parser.py  test_ifc_relationship_parser.py  test_ifc_space_boundary_parser.py  test_ifc_space_extractor.py  test_ifc_surface_extractor.py  test_json_builder.py  test_json_export_integration.py  test_main_azure_sql_integration.py  test_output_coordinator.py  test_pdf_exporter.py  test_performance_large_floor_plans.py  test_project_structure.py  test_setup.py  (+8 more)
venv311/: pyvenv.cfg
(+141 files in other folders)
